src/main/java/nikita/webapp/odata/ODataParser.java
// Generated from /home/tsodring/git/nikita-noark5-core/src/main/resources/odata/OData.g4 by ANTLR 4.7.2
package nikita.webapp.odata;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ODataParser extends Parser {
    public static final String[] ruleNames = makeRuleNames();

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, WHITESPACE=16, 
		EQ=17, GT=18, LT=19, GE=20, LE=21, AND=22, OR=23, ASC=24, DESC=25, TOP=26, 
		SKIP_=27, COUNT=28, ORDERBY=29, WS=30, DIGITS=31, HEX=32, STRING=33, UUID=34, 
		COLON=35, SEPERATOR=36, DOT=37;
	public static final int
		RULE_odataURL = 0, RULE_scheme = 1, RULE_host = 2, RULE_slash = 3, RULE_contextPath = 4, 
		RULE_api = 5, RULE_functionality = 6, RULE_parentResource = 7, RULE_resource = 8, 
		RULE_systemId = 9, RULE_port = 10, RULE_fromContextPath = 11, RULE_nikitaObjects = 12, 
		RULE_odataCommand = 13, RULE_filter = 14, RULE_search = 15, RULE_top = 16, 
		RULE_skip = 17, RULE_orderby = 18, RULE_searchCommand = 19, RULE_filterCommand = 20, 
		RULE_command = 21, RULE_comparatorCommand = 22, RULE_contains = 23, RULE_startsWith = 24, 
		RULE_attribute = 25, RULE_value = 26, RULE_sortOrder = 27, RULE_comparator = 28, 
		RULE_operator = 29, RULE_leftCurlyBracket = 30, RULE_rightCurlyBracket = 31, 
		RULE_and = 32, RULE_or = 33, RULE_eq = 34, RULE_gt = 35, RULE_lt = 36, 
		RULE_ge = 37, RULE_le = 38, RULE_string = 39, RULE_number = 40, RULE_uuid = 41, 
		RULE_asc = 42, RULE_desc = 43;
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();

    static {
        RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "odataURL", "scheme", "host", "slash", "contextPath", "api", "functionality",
                "parentResource", "resource", "systemId", "port", "fromContextPath",
                "nikitaObjects", "odataCommand", "filter", "search", "top", "skip", "orderby",
                "searchCommand", "filterCommand", "command", "comparatorCommand", "contains",
                "startsWith", "attribute", "value", "sortOrder", "comparator", "operator",
                "leftCurlyBracket", "rightCurlyBracket", "and", "or", "eq", "gt", "lt",
                "ge", "le", "string", "number", "uuid", "asc", "desc"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'http'", "'https'", "'/'", "'?'", "'$filter='", "'$search='",
                "'$top='", "'$skip='", "'$orderby='", "'''", "'contains'", "','", "'startsWith'",
                "'('", "')'", null, "'eq'", "'gt'", "'lt'", "'ge'", "'le'", "'and'",
                "'or'", "'asc'", "'desc'", "'top'", "'skip'", "'count'", "'orderby'",
                null, null, null, null, null, "':'", "'://'", "'.'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, "WHITESPACE", "EQ", "GT", "LT", "GE", "LE", "AND",
                "OR", "ASC", "DESC", "TOP", "SKIP_", "COUNT", "ORDERBY", "WS", "DIGITS",
                "HEX", "STRING", "UUID", "COLON", "SEPERATOR", "DOT"
        };
    }
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "OData.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ODataParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

    public static class OdataURLContext extends ParserRuleContext {
		public SchemeContext scheme() {
			return getRuleContext(SchemeContext.class,0);
		}
		public TerminalNode SEPERATOR() { return getToken(ODataParser.SEPERATOR, 0); }
		public HostContext host() {
			return getRuleContext(HostContext.class,0);
		}
		public FromContextPathContext fromContextPath() {
			return getRuleContext(FromContextPathContext.class,0);
		}
		public TerminalNode COLON() { return getToken(ODataParser.COLON, 0); }
		public PortContext port() {
			return getRuleContext(PortContext.class,0);
		}
		public OdataURLContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_odataURL; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterOdataURL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitOdataURL(this);
		}
	}

	public final OdataURLContext odataURL() throws RecognitionException {
		OdataURLContext _localctx = new OdataURLContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_odataURL);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			scheme();
			setState(89);
			match(SEPERATOR);
			setState(90);
			host();
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(91);
				match(COLON);
				setState(92);
				port();
				}
			}

			setState(95);
			fromContextPath();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SchemeContext extends ParserRuleContext {
		public SchemeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scheme; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterScheme(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitScheme(this);
		}
	}

	public final SchemeContext scheme() throws RecognitionException {
		SchemeContext _localctx = new SchemeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_scheme);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_la = _input.LA(1);
			if ( !(_la==T__0 || _la==T__1) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HostContext extends ParserRuleContext {
		public List<StringContext> string() {
			return getRuleContexts(StringContext.class);
		}
		public StringContext string(int i) {
			return getRuleContext(StringContext.class,i);
		}
		public List<TerminalNode> DOT() { return getTokens(ODataParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(ODataParser.DOT, i);
		}
		public HostContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_host; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterHost(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitHost(this);
		}
	}

	public final HostContext host() throws RecognitionException {
		HostContext _localctx = new HostContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_host);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			string();
			setState(102); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(100);
				match(DOT);
				setState(101);
				string();
				}
				}
				setState(104); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DOT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SlashContext extends ParserRuleContext {
		public SlashContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_slash; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterSlash(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitSlash(this);
		}
	}

	public final SlashContext slash() throws RecognitionException {
		SlashContext _localctx = new SlashContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_slash);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContextPathContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public ContextPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contextPath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterContextPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitContextPath(this);
		}
	}

	public final ContextPathContext contextPath() throws RecognitionException {
		ContextPathContext _localctx = new ContextPathContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_contextPath);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__2);
			setState(109);
			string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ApiContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public ApiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_api; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterApi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitApi(this);
		}
	}

	public final ApiContext api() throws RecognitionException {
		ApiContext _localctx = new ApiContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_api);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(T__2);
			setState(112);
			string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionalityContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public FunctionalityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionality; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterFunctionality(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitFunctionality(this);
		}
	}

	public final FunctionalityContext functionality() throws RecognitionException {
		FunctionalityContext _localctx = new FunctionalityContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionality);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(T__2);
			setState(115);
			string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParentResourceContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public ParentResourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parentResource; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterParentResource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitParentResource(this);
		}
	}

	public final ParentResourceContext parentResource() throws RecognitionException {
		ParentResourceContext _localctx = new ParentResourceContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_parentResource);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResourceContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public ResourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resource; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterResource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitResource(this);
		}
	}

	public final ResourceContext resource() throws RecognitionException {
		ResourceContext _localctx = new ResourceContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_resource);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SystemIdContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public SystemIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_systemId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterSystemId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitSystemId(this);
		}
	}

	public final SystemIdContext systemId() throws RecognitionException {
		SystemIdContext _localctx = new SystemIdContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_systemId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PortContext extends ParserRuleContext {
		public TerminalNode DIGITS() { return getToken(ODataParser.DIGITS, 0); }
		public PortContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_port; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterPort(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitPort(this);
		}
	}

	public final PortContext port() throws RecognitionException {
		PortContext _localctx = new PortContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_port);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(DIGITS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FromContextPathContext extends ParserRuleContext {
		public ContextPathContext contextPath() {
			return getRuleContext(ContextPathContext.class,0);
		}
		public ApiContext api() {
			return getRuleContext(ApiContext.class,0);
		}
		public FunctionalityContext functionality() {
			return getRuleContext(FunctionalityContext.class,0);
		}
		public NikitaObjectsContext nikitaObjects() {
			return getRuleContext(NikitaObjectsContext.class,0);
		}
		public OdataCommandContext odataCommand() {
			return getRuleContext(OdataCommandContext.class,0);
		}
		public FromContextPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fromContextPath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterFromContextPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitFromContextPath(this);
		}
	}

	public final FromContextPathContext fromContextPath() throws RecognitionException {
		FromContextPathContext _localctx = new FromContextPathContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_fromContextPath);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			contextPath();
			setState(126);
			api();
			setState(127);
			functionality();
			setState(128);
			match(T__2);
			setState(129);
			nikitaObjects();
			setState(130);
			match(T__3);
			setState(131);
			odataCommand();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NikitaObjectsContext extends ParserRuleContext {
		public ParentResourceContext parentResource() {
			return getRuleContext(ParentResourceContext.class,0);
		}
		public SystemIdContext systemId() {
			return getRuleContext(SystemIdContext.class,0);
		}
		public ResourceContext resource() {
			return getRuleContext(ResourceContext.class,0);
		}
		public NikitaObjectsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nikitaObjects; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterNikitaObjects(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitNikitaObjects(this);
		}
	}

	public final NikitaObjectsContext nikitaObjects() throws RecognitionException {
		NikitaObjectsContext _localctx = new NikitaObjectsContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_nikitaObjects);
		try {
			setState(140);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(133);
				parentResource();
				setState(134);
				match(T__2);
				setState(135);
				systemId();
				setState(136);
				match(T__2);
				setState(137);
				resource();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				resource();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OdataCommandContext extends ParserRuleContext {
		public List<FilterContext> filter() {
			return getRuleContexts(FilterContext.class);
		}
		public FilterContext filter(int i) {
			return getRuleContext(FilterContext.class,i);
		}
		public List<TopContext> top() {
			return getRuleContexts(TopContext.class);
		}
		public TopContext top(int i) {
			return getRuleContext(TopContext.class,i);
		}
		public List<SkipContext> skip() {
			return getRuleContexts(SkipContext.class);
		}
		public SkipContext skip(int i) {
			return getRuleContext(SkipContext.class,i);
		}
		public List<OrderbyContext> orderby() {
			return getRuleContexts(OrderbyContext.class);
		}
		public OrderbyContext orderby(int i) {
			return getRuleContext(OrderbyContext.class,i);
		}
		public OdataCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_odataCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterOdataCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitOdataCommand(this);
		}
	}

	public final OdataCommandContext odataCommand() throws RecognitionException {
		OdataCommandContext _localctx = new OdataCommandContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_odataCommand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__6) | (1L << T__7) | (1L << T__8))) != 0)) {
				{
				setState(146);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__4:
					{
					setState(142);
					filter();
					}
					break;
				case T__6:
					{
					setState(143);
					top();
					}
					break;
				case T__7:
					{
					setState(144);
					skip();
					}
					break;
				case T__8:
					{
					setState(145);
					orderby();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilterContext extends ParserRuleContext {
		public FilterCommandContext filterCommand() {
			return getRuleContext(FilterCommandContext.class,0);
		}
		public FilterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterFilter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitFilter(this);
		}
	}

	public final FilterContext filter() throws RecognitionException {
		FilterContext _localctx = new FilterContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_filter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(T__4);
			setState(152);
			filterCommand();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SearchContext extends ParserRuleContext {
		public SearchCommandContext searchCommand() {
			return getRuleContext(SearchCommandContext.class,0);
		}
		public SearchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_search; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterSearch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitSearch(this);
		}
	}

	public final SearchContext search() throws RecognitionException {
		SearchContext _localctx = new SearchContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_search);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(T__5);
			setState(155);
			searchCommand();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public TopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_top; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterTop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitTop(this);
		}
	}

	public final TopContext top() throws RecognitionException {
		TopContext _localctx = new TopContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_top);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(T__6);
			setState(158);
			number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SkipContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public SkipContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_skip; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterSkip(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitSkip(this);
		}
	}

	public final SkipContext skip() throws RecognitionException {
		SkipContext _localctx = new SkipContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_skip);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(T__7);
			setState(161);
			number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrderbyContext extends ParserRuleContext {
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public List<SortOrderContext> sortOrder() {
			return getRuleContexts(SortOrderContext.class);
		}
		public SortOrderContext sortOrder(int i) {
			return getRuleContext(SortOrderContext.class,i);
		}
		public OrderbyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orderby; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).enterOrderby(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODataListener ) ((ODataListener)listener).exitOrderby(this);
		}
	}

	public final OrderbyContext orderby() throws RecognitionException {
		OrderbyContext _localctx = new OrderbyContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_orderby);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(T__8);
			setState(164);
			attribute();
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASC || _la==DESC) {
				{
				setState(165);
				sortOrder();
				}
			}

			setState(174);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STRING) {
				{
				{
				setState(168);
				attribute();
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASC || _la==DESC) {
					{
					setState(169);
					sortOrder();
					}
				}

				}
				}
				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
